--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_gallery">category</string>
+    <string name="menu_slideshow">contact us</string>
     <string name="category">category</string>
     <string name="contact_us">contact us</string>
     <string name="click_here_to_go_to_category">go to category</string>
