Contact Us, Dual Language, Logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,47 @@
 <resources>
-    <string name="app_name">hupari diary</string>
+    <string name="app_name">Hupari Diary</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Hupari Diary</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">category</string>
-    <string name="menu_slideshow">contact us</string>
-    <string name="category">category</string>
-    <string name="contact_us">contact us</string>
+    <string name="menu_gallery">Category</string>
+    <string name="menu_slideshow">Contact us</string>
+    <string name="category">Category</string>
+    <string name="contact_us">Contact us</string>
     <string name="click_here_to_go_to_category">go to category</string>
+    <string name="toRegister">To Register into this App</string>
+    <string name="krishna">Krishnkant Powar</string>
+    <string name="calltoreg">Call to Register</string>
+    <string name="developerContact">Developer Details</string>
+    <string name="callDev">Call Developer</string>
+
+    <string name="changLang">Change Language</string>
+    <string name="hupari">HUPARI </string>
+    <string name="info">Hupari is a census town in Kolhapur district in the Indian state of Maharashtra. Hupari comes under Hatkanangle taluka.
+
+Hupari is famous for the production of silver ornaments. Most of the families in this city have ancestral skill for developing artistic ornaments from silver.
+
+ </string>
+    <string name="country">Country : India </string>
+    <string name="state">State : Maharashtra</string>
+    <string name="city">"District : Kolhapur</string>
+    <string name="silver">THE SILVER CITY OF INDIA HUPARI</string>
+
+    <string name="contDeatils">Contact Details</string>
+    <string name="address">Address: </string>
+    <string name="call">CALL</string>
+    <string name="maps">MAP DIRECTION</string>
+    <string name="rating">Rating</string>
+
+
+
+
+
+
+
+
 </resources>
